testsuite/tests/polykinds/T7151.stderr

T7151.hs:4:12: error: [GHC-68567]
    Illegal type: ‘[Int, String]’
    Suggested fix: Perhaps you intended to use DataKinds
