testsuite/tests/polykinds/T7151.hs
{-# LANGUAGE GHC2021 #-}
module T7151 where

type Foo = [Int, String]
